--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,7 @@ repositories {
 
 dependencies {
     compile 'com.github.kasra-sh:nanoserver:0.8.0'
-//    compile 'com.github.kasra-sh:esputils:1.0.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 // makes fat jar with all dependencies
