--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'ir.kasra_sh'
-version '1.0.8'
+version '1.0.9'
 
 apply plugin: 'idea'
 apply plugin: 'java'
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.kasra-sh:nanoserver:0.8.3'
+    compile 'com.github.kasra-sh:picohttpd:0.8.4'
 
 //    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
