--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'ir.kasra_sh'
-version '1.2.5'
+version '1.2.6'
 
 apply plugin: 'idea'
 apply plugin: 'java'
@@ -9,11 +9,11 @@ sourceCompatibility = 1.8
 
 repositories {
     maven { url 'https://jitpack.io' }
-    mavenCentral()
+//    mavenCentral()
 }
 
 dependencies {
-    compile 'com.github.kasra-sh:picohttpd:0.8.5'
+    compile 'com.github.kasra-sh:picohttpd:0.8.7'
 
 //    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
